# openex

./: .gitignore  meson.build
src/: modules.cpp
src/core/: arg.cpp  arg.hpp  config.cpp  config.hpp  core.cpp  core.hpp  core_inner.hpp  globals.cpp  globals.hpp  log.cpp  log.hpp  main.cpp  module.hpp  module_inner.hpp  modules.cpp  modules.hpp
src/window/: globals.cpp  globals.hpp  window.cpp  window.hpp  window_inner.hpp
